# privsep-talk

./: .gitignore  Cargo.toml  outline.org  package.json  pnpm-lock.yaml  slides.md  style.css  todo.org
.github/workflows/: ci.yml
privsep-channel/: Cargo.toml
privsep-channel/src/: channel.rs  channel_redux.rs  error.rs  lib.rs  serializefd.rs
privsep-ex1/: Cargo.toml
privsep-ex1/src/: controller.rs  engine.rs  msg.rs  parser.rs
privsep-ex2/: Cargo.toml
privsep-ex2/src/: controller.rs  engine.rs  msg.rs  parser.rs  proc.rs
privsep-orig/: Cargo.toml
privsep-orig/src/: cli.rs  controller.rs  engine.rs  error.rs  main.rs  msg.rs  parser.rs
privsep-rpn/: Cargo.toml
privsep-rpn-bin/: Cargo.toml
privsep-rpn-bin/src/: main.rs
privsep-rpn/src/: rpn.rs
src/: controller.rs  engine.rs  main.rs  msg.rs  parser.rs  proc.rs
