[workspace]
members = [
    "privsep-orig",
    "privsep-channel",
    "privsep-ex1",
    "privsep-ex2",
    "privsep-rpn",
    "privsep-rpn-bin",
]
resolver = "2"

[workspace.dependencies]
bincode = "1.3.3"
byteorder = "1.5.0"
clap = { version = "4.5", features = ["derive"] }
mio = "1"
nix = { version = "0.29.0", features = [
    "process",
] } # Only 'process' feature needed now
# sendfd = "0.4" # Or the latest version
sendfd = { git = "https://github.com/malcolmstill/sendfd.git", features = [
    "tokio",
] }
pledge = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
unveil = "0.3.2"
